# sochnepal

./: License  Makefile  README.md  docker-compose.yml
ai-service/: Dockerfile  main.py  pyproject.toml  (+2 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/apps/: exceptions.py  permissions.py
backend/apps/accounts/: admin.py  apps.py  authenticate.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_profile.py
backend/apps/comments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/comments/migrations/: 0001_initial.py
backend/apps/contacts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/contacts/migrations/: 0001_initial.py  0002_alter_contactus_options.py  0003_alter_contactus_subject.py
backend/apps/flags/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/flags/migrations/: 0001_initial.py  0002_flag_unique_report_flagged_by.py
backend/apps/reports/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
backend/apps/reports/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_report_address.py  0004_alter_report_image.py  0005_alter_report_options.py  0006_category_color_category_name_nepali.py  0007_upvote.py  0008_alter_upvote_report_alter_upvote_user.py
backend/core/: settings.py  urls.py
backend/entrypoints/: server-entrypoint.sh  worker-entrypoint.sh
backend/templates/: verify_email.html  verify_email.txt
(+91 files in other folders)
